--- a/plugin.yml
+++ b/plugin.yml
@@ -1,3 +1,8 @@
 name: tkSeichi
 version: 0.1.0
 main: tk.seichi.Control
+commands:
+  tp-above:
+    description:  player wo siteiblock ue ni tobasu.
+    usage: /<command> [distance] (default 20 block)
+    default:  true
