tp-above完成(0.2.0完成)
アイテム吸い寄せは0.5.0に持っていきました
とりあえず0.2.0が完成

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 name: tkSeichi
-version: 0.1.0
+version: 0.1.1
 main: tk.seichi.Control
 commands:
   tp-above:
     description:  player wo siteiblock ue ni tobasu.
-    usage: /<command> [distance] (default 20 block)
+    usage: /<command> [distance] (デフォルトは20ブロック)
     default:  true
